--- a/manifests/pod.yaml
+++ b/manifests/pod.yaml
@@ -6,6 +6,6 @@ spec:
   containers:
   - name: ubuntu
     image: ubuntu:18.04
-    containerPorts:
-    - 80
+    ports:
+    - containerPorts: 80
     command: ["tail","-f","/dev/null"]
