--- a/manifests/pod.yaml
+++ b/manifests/pod.yaml
@@ -6,6 +6,4 @@ spec:
   containers:
   - name: ubuntu
     image: ubuntu:18.04
-    ports:
-    - containerPort: 80
-    command: ["tail","-f","/dev/null"]
+    command: ["tail","-f","-n","100","/dev/null"]
