--- a/manifests/pod.yaml
+++ b/manifests/pod.yaml
@@ -3,7 +3,7 @@ kind: Pod
 metadata:
   name: ubuntu
 spec:
-  activeDeadlineSeconds: 58
+  activeDeadlineSeconds: 1000000
   containers:
   - name: ubuntu
     image: ubuntu:18.04
