--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -16,5 +16,5 @@ spec:
     spec:
       containers:
       - name: ubuntu
-        image: ubuntu:20.04
+        image: eu.gcr.io/zpm-package-manager/my:ubuntu20.04
         command: ["tail","-f","/dev/null"]
