--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -1,20 +1,27 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ubuntu
-  labels:
-    app: ubuntu
+  name: hackathon
 spec:
+  progressDeadlineSeconds: 600
   replicas: 1
   selector:
     matchLabels:
-      app: ubuntu
+      app: iris
+  strategy:
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
+    type: RollingUpdate
   template:
     metadata:
       labels:
-        app: ubuntu
+        app: iris
     spec:
       containers:
-      - name: ubuntu
-        image: eu.gcr.io/zpm-package-manager/my:ubuntu20.04
-        command: ["tail","-f","/dev/null"]
+        - name: iris
+          image: intersystemsdc/iris-community:2020.4.0.524.0-zpm
+          imagePullPolicy: Always
+          ports:
+          - containerPort: 51773
+          - containerPort: 52773
